--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center my-4">Carrito de Compras</h1>
 
-<div *ngIf="productosEnCarrito.length === 0" class="alert alert-warning text-center">
+<div *ngIf="productosEnCarrito.length === 0" class="sin-productos">
   No hay productos en el carrito.
 </div>
 
